@@ -57,6 +57,7 @@
 /tests/lib/keys-t
 /tests/lib/krb5-t
 /tests/lib/krb5-cred-t
+/tests/lib/krb5-remctl-t
 /tests/lib/krb5-tgt-t
 /tests/lib/random-t
 /tests/lib/token-crypto-t
