@@ -9,6 +9,7 @@ lib/keyring
 lib/keys
 lib/krb5
 lib/krb5-cred
+lib/krb5-remctl
 lib/krb5-tgt
 lib/token-crypto
 lib/token-decode
